--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/MyCommission.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/MyCommission.cshtml
@@ -207,7 +207,7 @@
                 h3html = item.Issue+"期";
             } else
             {
-                h3html = item.Money;
+                h3html = formatCurrency(item.Money);
 
             }
          
