--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/ModifyPassword.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/ModifyPassword.cshtml
@@ -22,7 +22,8 @@
 
         function modiflypwd()
         {
-            $("#btnconfirm").click(function () {
+            $("#btnconfirm").click(function ()
+            {
                 var oldpwd = $("#oldpwd").val();
                 var newpwd = $("#newpwd").val();
                 var cfnewpwd = $("#cfnewpwd").val();
