高手榜搜索+bug修复

--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/FansBang.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/FansBang.cshtml
@@ -156,7 +156,7 @@
             var id = clickElement.attr("data-id");
             var type = clickElement.attr("data-type")
             if (!id) return;
-            $.post('/Personal/MyRank', { type: type }, function (data) {
+            $.get('/Personal/MyRank', { type: type }, function (data) {
 
               
                 if (data.Success != true) {
