--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Index.cshtml
@@ -281,7 +281,7 @@
         </div>
     </div>
     <!--搜索-->
-    <div class="Plan_search"><a href="javascript:;"></a></div>
+    <div class="Plan_search"><a href="/Plan/ExpertSearch/@lType"></a></div>
 
     <script type="text/javascript" src="/js/luo/plan.index.expert.js"></script>
 </body>
