--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/ExpertSearch.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/ExpertSearch.cshtml
@@ -127,7 +127,7 @@
               console.log(data);
               if (data.Success == true)
               {
-                //  window.location.href = "/Plan/PlayRecord/" + lType + "?uid=" + UserId + "&type=1"
+               window.location.href = "/Plan/PlayRecord/" + lType + "?uid=" + UserId + "&type=1"
 
               } else
               {
