--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/ExpertSearch.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/ExpertSearch.cshtml
@@ -31,6 +31,7 @@
             });
 
 
+
             $(".ttIf2_Dlicon").on("click", function ()
             {
                 var uid=$(this).attr("data-uid");
@@ -107,7 +108,7 @@
 
                 li = '<li data-uid="'+value.UserId+'"><div class="ttIf1_cL f-l"><a href="javascript:;"><img src="' + (value.Avater =='' ? '/images/default_avater.png' : value.Avater) + '"></a></div>'
                 +'  <a href="javascript:;"  onclick="javascript:unorfollow(this,'+value.UserId+');" class="ttIf1_cGz f-r">'+text+'</a>'
-                + '    <div class="ttIf1_cR" data-uid="'+value.UserId+'"><a href="javascript:;">' + value.Name + '</a></div>'
+                + '    <div class="ttIf1_cR" onclick="InsertHotSearch('+value.UserId+',@lType)"  data-uid="'+value.UserId+'"><a href="javascript:;">' + value.Name + '</a></div>'
                 + ' </li>'
                 html.push(li);
             });
