--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/SetNickName.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/SetNickName.cshtml
@@ -16,11 +16,9 @@
     <script src="~/js/yjp.js"></script>
 
     <script>
-        $(function () {
-         
+        $(function ()
+        {
             set();
-
-         
         });
 
         function set()
