--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/WonderfulComment.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/WonderfulComment.cshtml
@@ -6,7 +6,7 @@
         <h3>精彩评论</h3>
         @if (Model.Count >= 3)
         {
-            <a href="/News/CommentList/@ViewBag.ArticleId">更多评论>></a>
+            <a href="/News/CommentList/@ViewBag.ArticleId?type=@ViewBag.Type">更多评论>></a>
         }
         <div style="clear:both;"></div>
     </div>
