--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/NewsDetail.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/NewsDetail.cshtml
@@ -1,4 +1,6 @@
 ﻿@using C8.Lottery.Model
+@using C8.Lottery.Portal.Models
+@using C8.Lottery.Public
 @model C8.Lottery.Model.News
 
 @{
@@ -6,6 +8,7 @@
     NewsType newsType = ViewBag.NewsType;
     LotteryType lottery = ViewBag.Lottery;
     List<News> recArticle = ViewBag.RecommendArticle;
+    List<RankIntegralModel> RankIntegral = ViewBag.ListRankIntegral;
 }
 
 <!DOCTYPE html>
@@ -205,185 +208,77 @@
         </div>
 
     }
-    @*<div class="raking" style="background: #fff;">
-        <div class="raking-title">双色球竞猜红人</div>
+    <div class="raking" style="background: #fff;">
+        <div class="raking-title">@(lottery.TypeName)竞猜红人</div>
         <div class="Ranking_Cinfo">
             <table width="100%" border="0" class="Ranking_table1">
                 <tbody>
-                    <tr>
-                        <td width="10%" align="center" valign="middle"><img src="/images/44_1.png" class="Ranking_Btu"></td>
-                        <td width="15%" align="center" valign="middle">
-                            <div class="Ranking_Blogotu">
-                                <a href="javascript:;"><img src="/images/44_5.png"></a>
-                            </div>
-                        </td>
-                        <td align="left" valign="middle">
-                            <p class="Ysfont">
-                                <a href="javascript:;">茶之轨迹</a>
-                            </p>
-                        </td>
-                        <td width="25%" align="center" valign="middle"><span class="Ds_money Jf_money">20000</span></td>
-                    </tr>
-                    <tr>
-                        <td align="center" valign="middle"><img src="/images/44_2.png" class="Ranking_Btu"></td>
-                        <td align="center" valign="middle">
-                            <div class="Ranking_Blogotu">
-                                <a href="javascript:;"><img src="/images/44_6.png"></a>
-                            </div>
-                        </td>
-                        <td align="left" valign="middle">
-                            <p class="Ysfont">
-                                <a href="javascript:;">linyuelong</a>
-                            </p>
-                        </td>
-                        <td align="center" valign="middle"><span class="Ds_money Jf_money">20000</span></td>
-                    </tr>
-                    <tr>
-                        <td align="center" valign="middle"><img src="/images/44_3.png" class="Ranking_Btu"></td>
-                        <td align="center" valign="middle">
-                            <div class="Ranking_Blogotu">
-                                <a href="javascript:;"><img src="/images/44_7.png"></a>
-                            </div>
-                        </td>
-                        <td align="left" valign="middle">
-                            <p class="Ysfont">
-                                <a href="javascript:;">我很好那么你呢</a>
-                            </p>
-                        </td>
-                        <td align="center" valign="middle"><span class="Ds_money Jf_money">20000</span></td>
-                    </tr>
-                    <tr>
-                        <td align="center" valign="middle">
-                            <p>4</p>
-                        </td>
-                        <td align="center" valign="middle">
-                            <div class="Ranking_Blogotu">
-                                <a href="javascript:;"><img src="/images/44_7.png"></a>
-                            </div>
-                        </td>
-                        <td align="left" valign="middle">
-                            <p>
-                                <a href="javascript:;">卡桑德拉</a>
-                            </p>
-                        </td>
-                        <td align="center" valign="middle"><span class="Ds_money Jf_money">20000</span></td>
-                    </tr>
-                    <tr>
-                        <td align="center" valign="middle">
-                            <p>5</p>
-                        </td>
-                        <td align="center" valign="middle">
-                            <div class="Ranking_Blogotu">
-                                <a href="javascript:;"><img src="/images/44_7.png"></a>
-                            </div>
-                        </td>
-                        <td align="left" valign="middle">
-                            <p>
-                                <a href="javascript:;">卡桑德拉</a>
-                            </p>
-                        </td>
-                        <td align="center" valign="middle"><span class="Ds_money Jf_money">20000</span></td>
-                    </tr>
-                    <tr>
-                        <td align="center" valign="middle">
-                            <p>6</p>
-                        </td>
-                        <td align="center" valign="middle">
-                            <div class="Ranking_Blogotu">
-                                <a href="javascript:;"><img src="/images/44_7.png"></a>
-                            </div>
-                        </td>
-                        <td align="left" valign="middle">
-                            <p>
-                                <a href="javascript:;">卡桑德拉</a>
-                            </p>
-                        </td>
-                        <td align="center" valign="middle"><span class="Ds_money Jf_money">20000</span></td>
-                    </tr>
-                    <tr>
-                        <td align="center" valign="middle">
-                            <p>7</p>
-                        </td>
-                        <td align="center" valign="middle">
-                            <div class="Ranking_Blogotu">
-                                <a href="javascript:;"><img src="/images/44_7.png"></a>
-                            </div>
-                        </td>
-                        <td align="left" valign="middle">
-                            <p>
-                                <a href="javascript:;">卡桑德拉</a>
-                            </p>
-                        </td>
-                        <td align="center" valign="middle"><span class="Ds_money Jf_money">20000</span></td>
-                    </tr>
-                    <tr>
-                        <td align="center" valign="middle">
-                            <p>8</p>
-                        </td>
-                        <td align="center" valign="middle">
-                            <div class="Ranking_Blogotu">
-                                <a href="javascript:;"><img src="/images/44_7.png"></a>
-                            </div>
-                        </td>
-                        <td align="left" valign="middle">
-                            <p>
-                                <a href="javascript:;">卡桑德拉</a>
-                            </p>
-                        </td>
-                        <td align="center" valign="middle"><span class="Ds_money Jf_money">20000</span></td>
-                    </tr>
-                    <tr>
-                        <td align="center" valign="middle">
-                            <p>9</p>
-                        </td>
-                        <td align="center" valign="middle">
-                            <div class="Ranking_Blogotu">
-                                <a href="javascript:;"><img src="/images/44_7.png"></a>
-                            </div>
-                        </td>
-                        <td align="left" valign="middle">
-                            <p>
-                                <a href="javascript:;">卡桑德拉</a>
-                            </p>
-                        </td>
-                        <td align="center" valign="middle"><span class="Ds_money Jf_money">20000</span></td>
-                    </tr>
-                    <tr>
-                        <td align="center" valign="middle">
-                            <p>10</p>
-                        </td>
-                        <td align="center" valign="middle">
-                            <div class="Ranking_Blogotu">
-                                <a href="javascript:;"><img src="/images/44_7.png"></a>
-                            </div>
-                        </td>
-                        <td align="left" valign="middle">
-                            <p>
-                                <a href="javascript:;">卡桑德拉</a>
-                            </p>
-                        </td>
-                        <td align="center" valign="middle"><span class="Ds_money Jf_money">20000</span></td>
-                    </tr>
-                    <tr>
-                        <td align="center" valign="middle">
-                            <p>11</p>
-                        </td>
-                        <td align="center" valign="middle">
-                            <div class="Ranking_Blogotu">
-                                <a href="javascript:;"><img src="/images/44_7.png"></a>
-                            </div>
-                        </td>
-                        <td align="left" valign="middle">
-                            <p>
-                                <a href="javascript:;">卡桑德拉</a>
-                            </p>
-                        </td>
-                        <td align="center" valign="middle"><span class="Ds_money Jf_money">20000</span></td>
-                    </tr>
+
+                    @if (RankIntegral != null || RankIntegral.Count > 0)
+                    {
+                        foreach (var item in RankIntegral)
+                        {
+                            if (item.Rank <= 3)
+                            {
+                                <tr>
+                                    <td width="10%" align="center" valign="middle"><img src="@Tool.GetRankImg(item.Rank)" class="Ranking_Btu"></td>
+                                    <td width="15%" align="center" valign="middle">
+                                        <div class="Ranking_Blogotu">
+                                            <a href="/Personal/UserCenter/@item.UserId">
+                                                @if (!string.IsNullOrEmpty(item.Avater))
+                                                {
+                                                    <img src="@item.Avater">
+                                                }
+                                                else
+                                                {
+                                                    <img src="~/images/default_avater.png">  
+                                                }
+                                          
+                                            </a>
+                                        </div>
+                                    </td>
+                                    <td align="left" valign="middle">
+                                        <p class="Ysfont">
+                                            <a href="/Personal/UserCenter/@item.UserId">@item.NickName</a>
+                                        </p>
+                                    </td>
+                                    <td width="25%" align="center" valign="middle"><span class="Ds_money Jf_money">@item.Score</span></td>
+                                </tr>
+                            }
+                            else
+                            {
+                                <tr>
+                                    <td align="center" valign="middle">
+                                        <p>@item.Rank</p>
+                                    </td>
+                                    <td align="center" valign="middle">
+                                        <div class="Ranking_Blogotu">
+                                            <a href="/Personal/UserCenter/@item.UserId">
+                                            @if (!string.IsNullOrEmpty(item.Avater))
+                                            {
+                                                <img src="@item.Avater">
+                                            }
+                                            else
+                                            {
+                                                <img src="~/images/default_avater.png">
+                                            }</a>
+                                        </div>
+                                    </td>
+                                    <td align="left" valign="middle">
+                                        <p>
+                                            <a href="/Personal/UserCenter/@item.UserId">@item.NickName</a>
+                                        </p>
+                                    </td>
+                                    <td align="center" valign="middle"><span class="Ds_money Jf_money">@item.Score</span></td>
+                                </tr>
+                            }
+                        }
+                    }
+
                 </tbody>
             </table>
         </div>
-    </div>*@
+    </div>
 
     @Html.Action("WonderfulComment", new { id = @Model.Id, type = 2 })
 
