--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/TypeList.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/TypeList.cshtml
@@ -219,7 +219,7 @@
             <dt><p><span class="spec"></span>香港正版图库</p></dt>
             <dd><a href="/News/Index/5/111">看图解码</a></dd>
             <dd><a href="/News/Index/5/112">幸运彩图</a></dd>
-            <dd><a href="/News/Index/5/113">精彩选图</a></dd>
+            <dd><a href="/News/Index/5/113">精选彩图</a></dd>
             <dd><a href="/News/Index/5/114">香港图库</a></dd>
         </dl>
         <div class="clearfix"></div>
