--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Index.cshtml
@@ -81,6 +81,12 @@
                         <p>粉丝</p>
                     </a>
                 </li>
+                <li>
+                    <a href="/Personal/Voucher">
+                        <h3>@Model.UserCoupon</h3>
+                        <p>卡劵</p>
+                    </a>
+                </li>
                 <div style="clear:both;"></div>
             </ul>
         </div>
